--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -63,35 +63,35 @@
                             <h2>Stack tecnologico</h2>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-2">
                     <div class="tecnología">
                         <h3>JavaScript</h3>
-                        <i class="fa-brands fa-js"></i>
+                        <img src="images/javascript.jpeg" alt="">
                     </div>
                 <div class="col-2">
                     <div class="tecnología">
                         <h3>PHP </h3>
-                        <i class="fa-brands fa-php"></i>
+                        <img src="images/php.jpg" alt="">
                 </div>
                 <div class="col-2">
                     <div class="tecnología">
                         <h3>HTML</h3>
-                        <i class="fa-brands fa-html5"></i>
+                        <img src="images/html5.png" alt="">
                 </div>
                 <div class="col-2">
                     <div class="tecnología">
                          <h3>API Rest</h3>
-                        <i class="fa-brands fa-js"></i>
+                         <img src="images/API rest.png" alt="">
                 </div>
                 <div class="col-2">
                     <div class="tecnología">
                          <h3>Larabel</h3>
-                        <i class="fa-brands fa-laravel"></i>
+                         <img src="images/laravel.jpg" alt="">
                 </div>
                 <div class="col-2">
                     <div class="tecnología">
                          <h3>bootstrap</h3>
-                        <i class="fa-brands fa-bootstrap"></i>
+                         <img src="images/bootstrap.jpg" alt="">
                     </div>
                 </div>
             </div>
