--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/estilos.css">
     <title>Sobre mi</title>
 </head>
-<body id="contacto" class="d-flex flex-column h-100">
+<body id="sobre-mi" class="d-flex flex-column h-100">
     <header class="container">
         <nav class="navbar navbar-expand-md mb-4">
             <div class="container-fluid">
@@ -43,59 +43,126 @@
             </div>
         </nav>
     </header>
-    <main class="container">
-        <div class="row">
-            <div class="col-12 pt-3 pb-5">
-                <h1>Sobre mi</h1>
-                </div>
-              </div>
+    <main>
+        <section class="container" id="descripcion">
              <div class="row">
-                <div class="col-12 col-sm-8">
+                <div class="col-12 col-sm-7">
+                    <h1 class="pb-5 pt-3">Sobre mi</h1>
                     <p>Apasionado por la tecnología y gestión de proyectos. Soy estudiante de cursos de programación Full Stack y de Base de datos.</p>
                     <a href="contacto.html" class="btn btn-rojo px-4">Enviar mensaje</a>
                 </div>
-                <div class="col-12 col-sm-4">
-                    <img src="images/Steven.jpg" alt="Steven Rojas" class="foto-perfil">
+                <div class="col-12 col-sm-5">
+                <img src="images/Steven.jpg" alt="Steven Rojas" class="foto-perfil">
+            </div>
+        </section>
+        <section id="Stack-tecnologico">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 pb-3" id="tecnología">
+                        <h2>
+                            Stack tecnologico
+                        </h2>
+                        
                 </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-12">
-                            <h2>Stack tecnologico</h2>
+            </div>
+        </section>
+        <section id="experiencia">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 pt-5 pb-4">
+                        <h2>
+                            Experiencia laboral
+                        </h2>
                     </div>
                 </div>
-                <div class="col-2">
-                    <div class="tecnología">
-                        <h3>JavaScript</h3>
-                        <img src="images/javascript.jpeg" alt="">
+                <div class="row border shadow">
+                <div class="col-3 text-center">
+                    <img src="images/descarga.png" class="img-experiencia">
+                </div>
+                <div class="col-9 my-5">
+                    <h3>Empleado en un bar</h3>
+                    <h4>Bar de la muerte</h4>
+                    <h5>2019 - 2020</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere explicabo sequi dolor architecto, eveniet aliquid dignissimos quis. Officiis, ut. Ea maxime eveniet itaque nihil velit vitae facilis deleniti nemo numquam.</p>
+                </div>
+            </div>
+        </section>
+        <section id="formacion-academica">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 pt-5 pb-4">
+                        <h2>
+                            Formacion academica
+                        </h2>
                     </div>
-                <div class="col-2">
-                    <div class="tecnología">
-                        <h3>PHP </h3>
-                        <img src="images/php.jpg" alt="">
                 </div>
-                <div class="col-2">
-                    <div class="tecnología">
-                        <h3>HTML</h3>
-                        <img src="images/html5.png" alt="">
-                </div>
-                <div class="col-2">
-                    <div class="tecnología">
-                         <h3>API Rest</h3>
-                         <img src="images/API rest.png" alt="">
-                </div>
-                <div class="col-2">
-                    <div class="tecnología">
-                         <h3>Larabel</h3>
-                         <img src="images/laravel.jpg" alt="">
-                </div>
-                <div class="col-2">
-                    <div class="tecnología">
-                         <h3>bootstrap</h3>
-                         <img src="images/bootstrap.jpg" alt="">
+                <div class="row border shadow">
+                    <div class="col-3 text-center">
+                        <img src="images/instituto.jpg">
+                    </div>
+                    <div class="col-9 my-5">
+                        <h3>Bachillerato culminado</h3>
+                        <h4>instituto Tecnisistemas</h4>
+                        <h5>2021 - 2024</h5>
+                        <p>https://institutotecnisistemas.com/</p>
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
+        <section id="curso-desarrollo"></section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 pt-5 pb-4">
+                        <h2>
+                            Curso de desarrollo profesional
+                        </h2>
+                    </div>
+                </div>
+                <div class="row border shadow">
+                    <div class="col-3 text-center">
+                        <img src="images/logo-depcsuite.svg" class="img-depc">
+                    </div>
+                    <div class="col-9 my-5">
+                        <h3>FULL STACK LIBRE MODULO 1 - FULL STACK LIBRE MODULO 2</h3>
+                        <h4>DEPCSUITE SA</h4>
+                        <h5>En proceso</h5>
+                        <p>Expedicion: Ene 2025</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="idiomas-hobbies">
+            <div class="container">
+                <div class="row">
+                    <div class="col-6 pt-5 pb-4">
+                        <div class="row border shadow">
+                            <div class="col-4 text-center">
+                            <i class="fa-solid fa-comments"></i>
+                            </div>
+                            <div class="col-2">
+                            <h2>IDIOMAS</h2>
+                            <li>ESPAÑOL - Nativo</li>
+                            </div>
+                        </div>                       
+                    </div>
+                        <div class="col-6 pt-5 pb-4">
+                            <div class="row border shadow">
+                                <div class="col-4 text-center">
+                                    <i class="fa-solid fa-table-tennis-paddle-ball"></i>
+                                </div>
+                                <div class="col-2">
+                                    <h2>HOBBIES</h2>
+                                    <ul>
+                                        <li>Dormir</li>
+                                        <li>Soplar</li>
+                                        <li>PC</li>
+                                    </ul>
+                                </div>
+                            </div>                       
+                        </div>                    
+                    </div>
+            </div>
+        </section>
     </main>
     <footer class="container mt-auto pb-3">
         <div class="btn-whatsapp px-3 pb-4">
